# imgmin

./: .gitignore  LICENSE-MIT.txt  Makefile  Makefile.in  README.md  README.txt  circle.yml  color-cnt.sh  config.h.in  configure.ac  imgmin.pl  imgmin.py  imgmin.sh
apache/: mod_imgmin.pl  setup.txt
misc/: color-cnt.sh
src/: .gitignore  Makefile  Makefile.am  dssim.c  dssim.h  imgmin.c  imgmin.h  imgmin.pl  imgmin.sh
src/apache/: mod_ext_filter_imgmin.pl
src/apache2/: Makefile  Makefile.am  mod_imgmin.c  setup.txt
test/: test.sh
test/results/: 2011-05-26.csv  2015-02-07.csv  2015-02-08.csv  2015-02-10.csv
web/: class.img.php  imgmin-web-svc-client.pl  index.php  svc-client.pl  svc.php
